# HKD-WebApp

./: README.md  build.sh  manage.py  procfile  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  build.sh  create_superuser.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_event_description_remove_event_name_event_end_and_more.py  0003_contact_alter_event_end_and_more.py
core/static/: events.csv
core/static/css/: about.css  bootstrap.min.css  calendar.css  counter.css  courses.css  donate.css  gallary.css  style.css  teachers copy.css  teachers.css
core/static/js/: donate.js  main.js  popup.js
core/static/lib/owlcarousel/assets/: owl.theme.default.css  owl.theme.green.min.css
core/static/scss/: bootstrap.scss
core/static/scss/bootstrap/scss/: _functions.scss  _variables.scss
core/static/video/: hkd-logo.webm
core/templates/: about.html  calendar.html  counter.html  courses.html  donate.html  event_base_template.html  event_template.html  gallary.html  home.html  library.html  teachers.html
hkd/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: events.csv
staticfiles/css/: about.css  calendar.css  gallary.css  style.css  teachers.css
staticfiles/js/: about.js  calendar copy.js  calendar.js  counter.js  main.js  teachers.js
staticfiles/lib/lightbox/css/: lightbox.min.css
staticfiles/lib/owlcarousel/assets/: owl.theme.default.min.css  owl.theme.green.css
