[tool.poetry]
name = "HKD-WEBAPP"
version = "0.1.0"
description = "Hare Krishna Devotion webapp"
authors = ["Divyani Sonawane <sonawanedivyani148@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
